# RAG-Assistant

./: README.md  chain.py  config.py  main.py  pdf_loader.py  pyproject.toml  vector_store.py
templates/: index.html
templates/partials/: message.html
tests/: test_chat_endpoint.py  test_openai_key.py  test_pdf_loader.py
