[tool.poetry]
name = "rag-assistant"
version = "0.1.0"
description = "RAG Assistant prototype built with Flask, LangChain & Qdrant"
authors = ["Arsalan Siddique <arsalan1699@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
# your other deps…
flask = "^2.3"
langchain = "^0.3.25"
openai = "^1.68.2"
qdrant-client = "^1.6"
python-dotenv = "^1.0"
dotenv = "^0.9.9"
langchain-qdrant = "^0.2.0"
langchain-openai = "^0.3.16"
pytest = "^8.3.5"
pypdf = "^5.5.0"
fastembed = "^0.7.0"
